# rust-otp-system

./: EXAMPLES.md  LICENSE  QUICKSTART.md  README.md  STRUCTURE.md  build.sh  НАЧАТЬ_ОТСЮДА.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
